# Autonomous-Outdoor-Scanning-via-Online-Topological-and-Geometric-Path-Optimization

./: readme.m  readme.md  readme.m~  setup.sh
grid_map_demos/rviz/: octomap_to_gridmap_demo.rviz
husky-melodic-devel/husky_description/urdf/: husky.urdf.xacro
husky_custom_description/: CMakeLists.txt  setup.bash backup
husky_custom_description/env-hooks/: 50.husky_custom_description.sh
husky_custom_description/launch/: base.urdf.rviz.launch
husky_custom_description/meshes/: lms151.dae  quanergyM8.dae  sensorArch.dae
husky_custom_description/urdf/: custom_description.urdf.xacro
husky_custom_gazebo/: CMakeLists.txt
husky_custom_gazebo/launch/: banana.launch  husky_empty_world.launch  husky_playpen.launch  husky_terrain.launch  husky_wild.launch  new.launch
husky_custom_gazebo/models/banana_fence/: model.config  model.sdf  zhalan.mtl
husky_custom_gazebo/models/banana_grass/: caodi.mtl  model.config  model.sdf
husky_custom_gazebo/models/banana_ground/: dimian.mtl  model.config  model.sdf
husky_custom_gazebo/models/banana_tree/: model.config  model.sdf  xiangjiao.mtl
husky_custom_gazebo/models/construction_barrel/: model-1_3.sdf  model-1_4.sdf  model.sdf
husky_custom_gazebo/src/: show_mesh.cpp
husky_custom_gazebo/urdf/: custom_description.gazebo.xacro
husky_custom_gazebo/worlds/: banana.world  heightmap_mesh.world  terrain_mesh.world  velodyne.world~
husky_custom_gazebo/worlds/mesh/: heightmap_simp.dae  mount.dae  mountains_simp.dae
husky_custom_gazebo/worlds/mesh/handmade/: terrain_handmade.dae
husky_description/: CMakeLists.txt  CMakeLists.txt~
husky_description/launch/: description.launch~
husky_description/urdf/: custom_description.urdf.xacro  husky.urdf.xacro  my_description.urdf.xacro
husky_description/urdf/custom/: test_red_hat.urdf.xacro
husky_gazebo/: CMakeLists.txt  CMakeLists.txt~  package.xml
husky_gazebo/env-hooks/: env_hooks.sh
husky_gazebo/launch/: husky_playpen.launch  husky_terrain.launch  husky_wild.launch  spawn_husky.launch
husky_gazebo/urdf/: description.gazebo.xacro  husky.gazebo.xacro
husky_gazebo/urdf/accessories/: kinect_camera.gazebo.xacro
husky_gazebo/worlds/: heightmap.world  heightmap_mesh.world~
husky_gazebo/worlds/heightmap/: model.config  model.sdf
husky_gazebo/worlds/mesh/Twin Islands/: Twin Islands_simp3.dae
husky_gazebo/worlds/mesh/Twin Islands/ciudad/: ciudad.dae
husky_navigation/: CMakeLists.txt
husky_navigation/config/: costmap_common.yaml  planner.yaml
husky_navigation_goals/: CMakeLists.txt  package.xml
husky_navigation_goals/launch/: send_goal.launch
husky_navigation_goals/src/: SendHuskyGoal.cpp  SendHuskyGoal.h  husky_navigation_goals.cpp
husky_viz/: CMakeLists.txt
husky_viz/rviz/: robot.rviz  robot.rviz~
loam_velodyne/: CMakeLists.txt
loam_velodyne/launch/: hector_loam_velodyne.launch  loam_velodyne.launch
octomap_mapping/octomap_server/launch/: octomap_mapping.launch
pointcloud_to_laserscan/launch/: sample_node.launch
simple_navigation_goals/: CMakeLists.txt  package.xml
simple_navigation_goals/src/: simple_navigation_goals.cpp
slam_trans/: CMakeLists.txt  package.xml
slam_trans/launch/: publish_SLAM_res.launch
slam_trans/src/: SLAMTrans.cpp  SLAMTrans.h  main.cpp
topo_confidence_map/: CMakeLists.txt  grid_map_demo.rviz  package.xml  simple_demo.yaml
topo_confidence_map/launch/: mapping.launch  mapping.launch~
topo_confidence_map/src/: Astar.cpp  Astar.h  BranchBound.cpp  BranchBound.h  ConfidenceMap.cpp  ConfidenceMap.h  ExtendedGridMap.cpp  ExtendedGridMap.h  GHPR.cpp  GHPR.h  HausdorffMeasure.cpp  HausdorffMeasure.h  LocalPathOptimization.cpp  LocalPathOptimization.h  OP.cpp  OP.h  OctoGrid.cpp  OctoGrid.h  TopologyMap.cpp  TopologyMap.h  main.cpp  readtxt.cpp  readtxt.h
travelable_region/: CMakeLists.txt  package.xml
travelable_region/launch/: gpinsac.launch
travelable_region/src/: Boundary.cpp  Boundary.h  CircularVector.h  GaussianProcess.h  GaussianProcessRegression.hxx  GroundExtraction.cpp  GroundExtraction.h  INSAC.cpp  INSAC.h  SectorPartition.cpp  SectorPartition.h  main.cpp
velodyne_description/: CHANGELOG.rst  package.xml
velodyne_description/launch/: example.launch
velodyne_description/urdf/: HDL-32E.urdf.xacro  VLP-16.urdf.xacro  example.urdf.xacro
velodyne_gazebo_plugins/: CHANGELOG.rst  package.xml
velodyne_gazebo_plugins/src/: GazeboRosVelodyneLaser.cpp
velodyne_simulator/: CHANGELOG.rst  package.xml
